[gd_scene load_steps=8 format=2]

[ext_resource path="res://styles/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/Widgets/Generic/ToggleIconButton.gd" type="Script" id=2]
[ext_resource path="res://scripts/Widgets/Generic/PassLineEdit.gd" type="Script" id=3]
[ext_resource path="res://sprites/GuiVisibilityVisible.svg" type="Texture" id=4]
[ext_resource path="res://sprites/GuiVisibilityHidden.svg" type="Texture" id=5]
[ext_resource path="res://scripts/Widgets/SettingsWidget.gd" type="Script" id=7]
[ext_resource path="res://scripts/Widgets/ComboBox.gd" type="Script" id=8]

[node name="VBoxContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="ServersContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 191.0

[node name="Title" type="Label" parent="ServersContainer"]
margin_right = 1024.0
margin_bottom = 23.0
theme = ExtResource( 1 )
theme_type_variation = "Header1Label"
text = "SERVERS"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="ServersContainer"]
margin_top = 27.0
margin_right = 1024.0
margin_bottom = 31.0

[node name="HBoxContainer3" type="HBoxContainer" parent="ServersContainer"]
margin_top = 35.0
margin_right = 1024.0
margin_bottom = 51.0
alignment = 1

[node name="Label" type="Label" parent="ServersContainer/HBoxContainer3"]
margin_left = 411.0
margin_top = 1.0
margin_right = 458.0
margin_bottom = 15.0
text = "Servers"

[node name="ServersCB" type="MenuButton" parent="ServersContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 462.0
margin_right = 612.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
theme_type_variation = "ComboBox"
text = "Test"
icon_align = 2
script = ExtResource( 8 )
new_value_text = "Add server..."

[node name="HBoxContainer6" type="HBoxContainer" parent="ServersContainer"]
margin_top = 55.0
margin_right = 1024.0
margin_bottom = 55.0
alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="ServersContainer"]
margin_top = 59.0
margin_right = 1024.0
margin_bottom = 83.0
alignment = 1

[node name="Label" type="Label" parent="ServersContainer/HBoxContainer5"]
margin_left = 419.0
margin_top = 5.0
margin_right = 501.0
margin_bottom = 19.0
text = "Server Name"

[node name="ServerNameLineEdit" type="LineEdit" parent="ServersContainer/HBoxContainer5"]
unique_name_in_owner = true
margin_left = 505.0
margin_right = 605.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
placeholder_text = "My Server"
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="ServersContainer"]
margin_top = 87.0
margin_right = 1024.0
margin_bottom = 139.0
alignment = 1

[node name="GridContainer" type="GridContainer" parent="ServersContainer/HBoxContainer"]
margin_left = 311.0
margin_right = 501.0
margin_bottom = 52.0
columns = 2

[node name="Label" type="Label" parent="ServersContainer/HBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 66.0
margin_bottom = 19.0
text = "Hostname"

[node name="HostnameLineEdit" type="LineEdit" parent="ServersContainer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 70.0
margin_right = 190.0
margin_bottom = 24.0
rect_min_size = Vector2( 120, 0 )
placeholder_text = "127.0.0.1"
caret_blink = true
caret_blink_speed = 0.5

[node name="Label3" type="Label" parent="ServersContainer/HBoxContainer/GridContainer"]
margin_top = 33.0
margin_right = 66.0
margin_bottom = 47.0
text = "Port"

[node name="PortSpinBox" type="SpinBox" parent="ServersContainer/HBoxContainer/GridContainer"]
unique_name_in_owner = true
margin_left = 70.0
margin_top = 28.0
margin_right = 190.0
margin_bottom = 52.0
rect_min_size = Vector2( 120, 0 )
min_value = 1024.0
max_value = 65535.0
value = 8080.0
rounded = true
align = 2

[node name="VSeparator" type="VSeparator" parent="ServersContainer/HBoxContainer"]
margin_left = 505.0
margin_right = 509.0
margin_bottom = 52.0

[node name="GridContainer2" type="GridContainer" parent="ServersContainer/HBoxContainer"]
margin_left = 513.0
margin_right = 713.0
margin_bottom = 52.0
columns = 2

[node name="Label2" type="Label" parent="ServersContainer/HBoxContainer/GridContainer2"]
margin_top = 5.0
margin_right = 66.0
margin_bottom = 19.0
text = "Username"

[node name="UserLineEdit" type="LineEdit" parent="ServersContainer/HBoxContainer/GridContainer2"]
unique_name_in_owner = true
margin_left = 70.0
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 0 )
placeholder_text = "username"
caret_blink = true
caret_blink_speed = 0.5

[node name="Label4" type="Label" parent="ServersContainer/HBoxContainer/GridContainer2"]
margin_top = 33.0
margin_right = 66.0
margin_bottom = 47.0
text = "Password"

[node name="HBoxContainer" type="HBoxContainer" parent="ServersContainer/HBoxContainer/GridContainer2"]
margin_left = 70.0
margin_top = 28.0
margin_right = 200.0
margin_bottom = 52.0

[node name="PassLineEdit" type="LineEdit" parent="ServersContainer/HBoxContainer/GridContainer2/HBoxContainer"]
unique_name_in_owner = true
margin_right = 104.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
secret = true
placeholder_text = "123456"
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource( 3 )

[node name="PassVisibleButton" type="Button" parent="ServersContainer/HBoxContainer/GridContainer2/HBoxContainer"]
margin_left = 108.0
margin_right = 130.0
margin_bottom = 24.0
rect_min_size = Vector2( 22, 0 )
toggle_mode = true
expand_icon = true
script = ExtResource( 2 )
icon_pressed = ExtResource( 4 )
icon_normal = ExtResource( 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="ServersContainer"]
margin_top = 143.0
margin_right = 1024.0
margin_bottom = 167.0
alignment = 1

[node name="SSLCheckBox" type="CheckBox" parent="ServersContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 400.0
margin_right = 523.0
margin_bottom = 24.0
pressed = true
text = "Use SSL (https)"

[node name="VerifyCheckBox" type="CheckBox" parent="ServersContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 527.0
margin_right = 623.0
margin_bottom = 24.0
pressed = true
text = "Verify host"

[node name="HBoxContainer4" type="HBoxContainer" parent="ServersContainer"]
margin_top = 171.0
margin_right = 1024.0
margin_bottom = 191.0
alignment = 1

[node name="SaveServerButton" type="Button" parent="ServersContainer/HBoxContainer4"]
unique_name_in_owner = true
margin_left = 462.0
margin_right = 503.0
margin_bottom = 20.0
text = "Save"

[node name="DeleteServerButton" type="Button" parent="ServersContainer/HBoxContainer4"]
unique_name_in_owner = true
self_modulate = Color( 1, 0.392157, 0.392157, 1 )
margin_left = 507.0
margin_right = 562.0
margin_bottom = 20.0
text = "Delete"

[node name="PerspectivesContainer" type="VBoxContainer" parent="."]
margin_top = 195.0
margin_right = 1024.0
margin_bottom = 374.0

[node name="Title" type="Label" parent="PerspectivesContainer"]
margin_right = 1024.0
margin_bottom = 23.0
theme = ExtResource( 1 )
theme_type_variation = "Header1Label"
text = "Perspectives"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="PerspectivesContainer"]
margin_top = 27.0
margin_right = 1024.0
margin_bottom = 31.0

[node name="HBoxContainer8" type="HBoxContainer" parent="PerspectivesContainer"]
margin_top = 35.0
margin_right = 1024.0
margin_bottom = 51.0
alignment = 1

[node name="Label" type="Label" parent="PerspectivesContainer/HBoxContainer8"]
margin_left = 394.0
margin_top = 1.0
margin_right = 476.0
margin_bottom = 15.0
text = "Perspectives"

[node name="PerspectivesCB" type="MenuButton" parent="PerspectivesContainer/HBoxContainer8"]
unique_name_in_owner = true
margin_left = 480.0
margin_right = 630.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
focus_mode = 2
theme_type_variation = "ComboBox"
text = "Test"
icon_align = 2
script = ExtResource( 8 )
new_value_text = "Add perspective..."

[node name="HBoxContainer7" type="HBoxContainer" parent="PerspectivesContainer"]
margin_top = 55.0
margin_right = 1024.0
margin_bottom = 79.0
alignment = 1

[node name="Label" type="Label" parent="PerspectivesContainer/HBoxContainer7"]
margin_left = 403.0
margin_top = 5.0
margin_right = 467.0
margin_bottom = 19.0
text = "Tab Name"

[node name="TabNameLineEdit" type="LineEdit" parent="PerspectivesContainer/HBoxContainer7"]
unique_name_in_owner = true
margin_left = 471.0
margin_right = 621.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
placeholder_text = "My New Perspective"

[node name="HBoxContainer11" type="HBoxContainer" parent="PerspectivesContainer"]
margin_top = 83.0
margin_right = 1024.0
margin_bottom = 99.0
alignment = 1

[node name="Label" type="Label" parent="PerspectivesContainer/HBoxContainer11"]
margin_left = 415.0
margin_top = 1.0
margin_right = 455.0
margin_bottom = 15.0
text = "Server"

[node name="PerspectiveServerCB" type="MenuButton" parent="PerspectivesContainer/HBoxContainer11"]
unique_name_in_owner = true
margin_left = 459.0
margin_right = 609.0
margin_bottom = 16.0
rect_min_size = Vector2( 150, 0 )
focus_mode = 2
theme_type_variation = "ComboBox"
text = "Test"
icon_align = 2
script = ExtResource( 8 )
has_new_value = false

[node name="HBoxContainer9" type="HBoxContainer" parent="PerspectivesContainer"]
margin_top = 103.0
margin_right = 1024.0
margin_bottom = 127.0
alignment = 1

[node name="AutoUpdateCheckBox" type="CheckBox" parent="PerspectivesContainer/HBoxContainer9"]
unique_name_in_owner = true
margin_left = 408.0
margin_right = 615.0
margin_bottom = 24.0
pressed = true
text = "Auto update on tab changed"

[node name="HBoxContainer10" type="HBoxContainer" parent="PerspectivesContainer"]
margin_top = 131.0
margin_right = 1024.0
margin_bottom = 155.0
alignment = 1

[node name="Label" type="Label" parent="PerspectivesContainer/HBoxContainer10"]
margin_left = 442.0
margin_top = 5.0
margin_right = 503.0
margin_bottom = 19.0
text = "Plan filter"

[node name="PlanSpinBox" type="SpinBox" parent="PerspectivesContainer/HBoxContainer10"]
unique_name_in_owner = true
margin_left = 507.0
margin_right = 581.0
margin_bottom = 24.0
min_value = -1.0
value = -1.0
rounded = true
align = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="PerspectivesContainer"]
margin_top = 159.0
margin_right = 1024.0
margin_bottom = 179.0
alignment = 1

[node name="SavePerspectiveButton" type="Button" parent="PerspectivesContainer/HBoxContainer4"]
unique_name_in_owner = true
margin_left = 462.0
margin_right = 503.0
margin_bottom = 20.0
text = "Save"

[node name="DeletePerspectiveButton" type="Button" parent="PerspectivesContainer/HBoxContainer4"]
unique_name_in_owner = true
self_modulate = Color( 1, 0.392157, 0.392157, 1 )
margin_left = 507.0
margin_right = 562.0
margin_bottom = 20.0
text = "Delete"

[connection signal="toggled" from="ServersContainer/HBoxContainer/GridContainer2/HBoxContainer/PassVisibleButton" to="ServersContainer/HBoxContainer/GridContainer2/HBoxContainer/PassLineEdit" method="_on_PassVisibleButton_toggled"]
